--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Infinitum.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derbyclient.jar=/home/lachtara/java/jdk1.8.0_74/db/lib/derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=Main.Infinitum
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
